# horn-py

./: .gitignore  .gitlab-ci.yml  .travis.yml  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  horn.py  index.html  pyproject.toml  setup.cfg  setup.py  sitemap.xml
css/: main.css
docs/: adding-pages.html  gen-model.html  gen-schema.html  new.html  quickstart.html
docs/gen-api/: index.html
docs/structure/: index.html
en/: help.html  index.html
help/: index.html
horn/: __init__.py  cli.py  naming.py  path.py  tpl.py  utils.py
horn/cli/: __init__.py  api.py  model.py  new.py  repo.py  schema.py  service.py
horn/impl/: __init__.py  model.py  new.py  repo.py  schema.py
horn/templates/new/: .gitignore.jinja  MANIFEST.in  Pipfile.tmpl  README.md.jinja  README.md.tmpl  logging.ini.jinja  logging.ini.tmpl  project.toml.tmpl  pyproject.toml.tmpl  setup.cfg  setup.py.tmpl
horn/templates/new/[[ app ]]/: __init__.py  exts.py.tmpl  router.py.tmpl  swagger.py.tmpl
horn/templates/new/[[ app ]]/config/: development.py.tmpl
horn/templates/new/[[ app ]]/core/: __init__.py.tmpl  database.py.tmpl  errors.py.tmpl  schema.py.tmpl
horn/templates/new/[[ app ]]/models/: __init__.py.tmpl  user.py.tmpl
horn/templates/new/[[ app ]]/schemas/: __init__.py.tmpl  helpers.py.tmpl  user.py.tmpl
horn/templates/new/[[ app ]]/views/: home.py.tmpl  session.py.tmpl  user.py.tmpl
horn/templates/new/instance/: prod.secret.cfg.jinja
horn/templates/new/test/views/: test_session.py
horn/templates/new/tests/: conftest.py.jinja  conftest.py.tmpl  factories.py.tmpl  test_swagger.py
horn/templates/new/tests/views/: test_home.py  test_session.py  test_user.py
horn/templates/new/{{ app }}/: __init__.py  exts.py.jinja  helpers.py.jinja  router.py.jinja  run.py.jinja  swagger.py.jinja
horn/templates/new/{{ app }}/config/: default.py.jinja  development.py.jinja  production.py  testing.py.tmpl
horn/templates/new/{{ app }}/core/: __init__.py.jinja  database.py.jinja  errors.py.jinja  schema.py.tmpl
horn/templates/new/{{ app }}/models/: __init__.py.jinja  helpers.py.jinja  user.py.tmpl
horn/templates/new/{{ app }}/schemas/: __init__.py.jinja  helpers.py.tmpl  user.py.tmpl
horn/templates/new/{{ app }}/views/: __init__.py.jinja  home.py.jinja  session.py.tmpl  user.py.tmpl
impl/: __init__.py  model.py  naming.py  new.py  repo.py  utils.py
templates/horn_proj/: .gitignore  Pipfile.tmpl  proj.toml.tmpl  pytest.ini
templates/horn_proj/[[ app ]]/: __init__.py  cmds.py  exts.py.tmpl  helpers.py.tmpl  router.py.tmpl
templates/horn_proj/[[ app ]]/config/: default.py.tmpl  testing.py.tmpl
templates/horn_proj/[[ app ]]/core/: __init__.py  database.py.tmpl  schema.py.tmpl
templates/horn_proj/[[ app ]]/schemas/: __init__.py.tmpl  user.py.tmpl
templates/horn_proj/[[ app ]]/views/: __init__.py.tmpl  session.py.tmpl
templates/horn_proj/instance/: prod.secret.cfg  prod.secret.cfg.tmpl
templates/horn_proj/test/: conftest.py.tmpl  factories.py.tmpl  test_swagger.py
templates/horn_proj/test/views/: test_home.py
templates/model/: [[ module_file ]].py.tmpl
templates/new/: Pipfile.tmpl  project.toml.tmpl
templates/new/[[ app ]]/: run.py.tmpl  swagger.py.tmpl
templates/new/[[ app ]]/config/: development.py.tmpl
templates/new/[[ app ]]/core/: errors.py.tmpl
templates/new/[[ app ]]/models/: helpers.py.tmpl  user.py.tmpl
templates/new/[[ app ]]/schemas/: helpers.py.tmpl
templates/new/[[ app ]]/views/: user.py.tmpl
templates/schema/: [[ module_file ]].py.tmpl
tests/: __init__.py  conftest.py  fixture.json  test_gen_api.py  test_gen_model.py  test_gen_schema.py  test_new.py
