[tool.poetry]
name = "horn-py"
version = "0.6.0"
description = ""
authors = ["bigfang <bitair@gmail.com>"]
license = "MIT"
packages = [{ include="horn", from="." }]

[[tool.poetry.source]]
name = "douban"
url = "https://pypi.doubanio.com/simple"
default = true

[tool.poetry.dependencies]
python = "^3.7"
docopt = "^0.6.2"
copier = "~2.3.3"
pampy = "^0.3.0"
toml = "^0.10.0"
inflection = "^0.4.0"
wheel = "^0.34.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
twine = "^3.1.1"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
pytest-testdox = "^1.2.1"
tox = "^3.14.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
