[tool.poetry]
name = "horn-py"
version = "0.6.3"
description = "A Flask scaffolding tool"
authors = ["bigfang <bitair@gmail.com>"]
license = "MIT"
packages = [{ include="horn", from="." }]
readme = "README.md"

[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "default"

[tool.poetry.dependencies]
python = "^3.8.1"
docopt = "^0.6.2"
copier = "^8.1.0"
pampy = "^0.3.0"
toml = "^0.10.2"
inflection = "^0.5.1"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-testdox = "^3.0.1"
tox = "^4.6.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
