[metadata]
license_file = LICENSE

[flake8]
statistics = true
accept-encodings = utf-8
exclude = .git, .tox, __pycache__, .pytest_cache, docs, build, dist, tmp, .cache, .local
ignore = E501

[tool:pytest]
addopts = --doctest-modules --disable-warnings --cov . --cov-report term-missing --no-cov-on-fail --basetemp=tmp
testdox_format = plaintext
testpaths =
    horn
    tests
norecursedirs =
    .git/*
    horn/templates/*
    website/*
    .local/*
    .cache/*

[coverage:run]
branch = true
omit =
    setup.py
    tests/*
    .tox/*
    .local/*
    .cache/*

[tox]
envlist = py36,py37,pypy3

[testenv]
deps =
    docopt
    toml
    inflection
    pampy
    copier
    flake8
    pytest
    pytest-cov
    pytest-testdox
commands =
    flake8
    py.test {posargs}
