[metadata]
license_files = LICENSE

[flake8]
ignore = E501
exclude = .git, .tox, __pycache__, .pytest_cache, docs, build, dist, tmp, .cache, .local

[tool:pytest]
addopts = --doctest-modules --disable-warnings --cov=. --cov-report=term-missing --basetemp=tmp
testdox_format = plaintext
testpaths =
    horn
    tests
norecursedirs =
    .git/*
    horn/templates/*
    website/*
    .local/*
    .cache/*

[coverage:run]
# branch = true          # Can't combine line data with arc data
omit =
    setup.py
    tests/*
    horn/templates/*
    .tox/*
    .local/*
    .cache/*

[tox]
envlist = py36,py37,py38,py39,py310,py311,pypy3

[testenv]
deps =
    docopt
    toml
    inflection
    pampy
    copier
    flake8
    pytest
    pytest-cov
commands =
    flake8
    pytest {posargs}
